[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperx"
version = "2024.2.9"
authors = [
  { name="Kelly Ann Smith", email="kellyann.smith@collieraerospace.com" },
  { name="Noah Prezant", email="noah.prezant@collieraerospace.com" },
]
description = "HyperX scripting for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pythonnet>=3.0.1",
]


[project.urls]
"Homepage" = "https://collieraerospace.com"
